--- a/config/database.yml
+++ b/config/database.yml
@@ -25,8 +25,8 @@
 #   database: db/production.sqlite3
 
 development:
-  adapter: postgresql
-  database: dev_dbblog
+  adapter: sqlite3
+  database: db/development.sqlite3
   pool: 5
   timeout: 5000
 test:
