--- a/config/database.yml
+++ b/config/database.yml
@@ -37,6 +37,11 @@ test:
 
 production:
   adapter: postgresql
-  database: prod_dbblog
+  encoding: unicode
+  database: blog_production
+  username: blog
+  password: blog
+  host: localhost
+  port: 5432
   pool: 5
   timeout: 5000
