--- a/config/database.yml
+++ b/config/database.yml
@@ -39,8 +39,8 @@ production:
   adapter: postgresql
   encoding: unicode
   database: blog_production
-  username: blog
-  password: blog
+  username: deploy
+  password: deploy
   host: localhost
   port: 5432
   pool: 5
